ncc/testsuite/negative/namespace-b231.n
using Nemerle.Colections;  // E: referenced namespace .* does not exist

class A { }